Style: Fix order-items overlap with price

--- a/src/components/UserDetails/UserDetailsComponents/Orders/style.module.css
+++ b/src/components/UserDetails/UserDetailsComponents/Orders/style.module.css
@@ -45,10 +45,14 @@
 }
 
 .itemDetailsCon {
+  display: flex;
+
   padding-top: 20px;
   position: relative;
 }
-
+.orderItems {
+  flex-basis: 75%;
+}
 .image {
   height: 100px;
   max-width: 100%;
@@ -63,10 +67,10 @@
 }
 
 .totalPrice {
-  float: right;
-  position: absolute;
-  top: 22px;
-  right: 0;
+  flex-basis: 40%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
   color: #535665;
   font-size: 14px;
 }
